# waifu-bot

./: Cargo.toml  README.md  start.sh
src/: main.rs
